--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -13,8 +13,22 @@
     <div th:insert="~{fragments/header :: menu}"></div>
     <div class="container">
         <div class="row my-4">
-            <div class="col-md-12">
+            <div class="col-md-4">
                 <a th:href="@{/customers/create}" class="btn btn-primary">+ New Customer</a>
+            </div>
+            <div class="col-md-4">
+                <form method="GET" th:action="@{/customers/search}">
+                    <div class="form-group">
+                        <input type="text" name="query" th:value="${query}"/>
+                        <button type='submit' class="btn btn-success">Search</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-4">
+                <form method="GET" th:action="@{/customers/export/excel}">
+                    <input type="hidden" th:value="${query}" name="query"/>
+                    <button type='submit' class="btn btn-success">Export To Excel</button>
+                </form>
             </div>
         </div>
         <div class="row my-4">
